<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.DetailStoryActivity">

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/image_story"
        android:transitionName="photo"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@color/dark_electric_blue" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/title_story"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:transitionName="title" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="@string/desc_story"
        android:textColor="@color/dark_electric_blue"
        android:transitionName="description" />

</LinearLayout>